--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -91,10 +91,13 @@ li{
 .menus{
     list-style: none; 
     display: flex;
-    gap: 2rem;
 }
 .menus > li{
     transition: color 0.2s ease-in-out;
+
+}
+.menus > :not(:last-child){
+    margin-right: 2rem;
 }
 .menus > li:hover{
     color: hsl(227, 12%, 61%);
@@ -112,7 +115,7 @@ li{
     background-color: hsl(12, 88%, 59%);
     color: hsl(0, 0%, 98%);
     padding: 13px 2.5rem;
-    margin: 3rem auto 0;
+    margin: 2rem auto 0;
     border-radius: 2rem;
     transition: background-color 0.2s ease-in-out;
 }
@@ -156,10 +159,10 @@ main{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    margin-bottom: 2rem;
+
 }
-.vantagens :last-child{
-    margin-bottom: 0;
+.vantagens :not(:last-child){
+    margin-bottom: 2rem;
 }
 h4{
     font-size: 1rem;
@@ -181,12 +184,19 @@ h4{
 .section-4 > h1{
     text-align: center;
 }
-
 .grid-feedback{
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* sintax escolhida aqui no caso: grid-template-columns: repeat(quantidade de colunas, tamanho da coluna flex em fr); */
-    margin-top: 6rem;
-    grid-column-gap: 1rem;
+    width: calc(100% - 2rem); 
+    margin: 5rem auto 0;
+    display: flex;
+    flex-wrap: wrap;
+}
+.grid-feedback > div{
+    flex: 1 1 20%;
+    background-color: hsl(0, 0%, 98%);
+    height: 210px;
+}
+ .grid-feedback > :not(:last-child){
+    margin-right: 1rem;
 }
 .feedback{
     border-radius: 5px;
@@ -247,7 +257,11 @@ footer{
 }
 .redes-sociais{
     display: flex;
-    gap: 7px;
+
+}
+.redes-sociais > :not(:last-child){
+    display: flex;
+    margin-right: 7px;
 }
 .redes-sociais-icons > path{
     transition: fill 0.2s ease-in-out;
@@ -258,16 +272,14 @@ footer{
 
 .menus-footer li{
     color: hsl(227, 12%, 61%);
-    margin-bottom: 18px;
+    margin-bottom: 10px;
     font-weight: 400;
     transition: color 0.2s ease-in-out;
 }
 .menus-footer li:hover{
     color: hsl(12, 88%, 59%);
 }
-ul :last-child{
-    margin: 0;
-}
+
 
 #inbox{
     padding: 13px;
@@ -312,24 +324,25 @@ ul :last-child{
     overflow: visible;
 }
 
-@media screen and (min-width: 1200px) {
-    .menu-hambuguer{
-        display: none;
-    }
-}
 @media screen and (max-width: 1200px) {
+    .menus > :not(:last-child) {
+        margin-right: 0;
+    }
     .menu-hambuguer{
-        width: 26px;
+        width: 25px;
         display: flex;
         flex-direction: column;
-        gap: 3px;
-        z-index: 11;
+        position: relative;
+        z-index: 5;
     }
     .menu-hambuguer > div{
         width: 100%;
         height: 4px;
         background-color: hsl(228, 39%, 23%);
         transition: transform 0.5s, opacity 0.2s;
+    }
+    .menu-hambuguer > :not(:last-child){
+        margin-bottom: 3px;
     }
     .menu-hambuguer-actved :first-child{
         transform: translateY(7px) rotateZ(45deg);
@@ -359,6 +372,12 @@ ul :last-child{
     }
     .menus > li{
         font-size: 1.5rem;
+        margin-right: 0;
+
+    }
+    .menus > :not(:last-child){
+
+        margin-bottom: 2rem;
     }
     .menuCliked{
         left: 50%;
@@ -367,9 +386,8 @@ ul :last-child{
         transform-origin: right;
     }
     [data-menuInBlur]{
-        z-index: 10;
-        background-color: transparent;
-        backdrop-filter: blur(2rem);
+        z-index: 4;
+        background-color: #111111a6;
         position: fixed;
         touch-action: none;
         top: 0;
@@ -382,10 +400,21 @@ ul :last-child{
     }
     .grid-feedback{
         grid-template-columns: repeat(3, 1fr);
-        grid-row-gap: 1.5rem;
     }
 }
 @media screen and (max-width: 1100px) {
+    .grid-feedback > :not(:last-child) {
+        margin-right: 0;
+    }
+    .grid-feedback > div{
+        flex: 1 1 35%;
+    }
+    .grid-feedback > :nth-child(n-2){
+        margin-bottom: 1rem;
+    }
+    .grid-feedback > :nth-child(odd){
+        margin-right: 1rem;
+    }
     .footer-section-2{
         align-items: center;
         flex-direction: column;
@@ -408,7 +437,9 @@ ul :last-child{
     }
     .redes-sociais{
         margin-top: 0;
-        gap: 3rem;
+    }
+    .redes-sociais > :not(:last-child){
+        margin-right: 3rem;
     }
     .redes-sociais-icons{
         transform: scale(1.7);
@@ -437,7 +468,7 @@ ul :last-child{
         margin-top: 2rem;
     }
     .get-started{
-        margin-top: 2rem;
+        margin-top: 1rem;
     }
     .section-1, .section-2, .section-3, .section-4{
         align-items: center;
@@ -499,7 +530,7 @@ ul :last-child{
         text-align: center;
     }
 }
-@media screen and (max-width: 516px) {
+@media screen and (max-width: 600px) {
     .glide{
         width: calc(100% - 2rem);
         margin: 0 auto;
@@ -567,6 +598,11 @@ ul :last-child{
         font-size: 1.3rem;
     }
 }
+@media screen and (max-width: 470px) {
+    .glide__bullets{
+        bottom: -0.4rem;
+    }
+}
 @media screen and (max-width: 400px) {
     .bg-patther-1{
         background-size: 130%;
@@ -577,8 +613,5 @@ ul :last-child{
     }
     body{
         min-width: 400px;
-    }
-    .glide__bullets{
-        bottom: -0.5rem;
     }
 }
