--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -51,7 +51,6 @@ header{
 }
 
 .nav-menu-manage{
-    align-items: center;
     display: flex;
     justify-content: space-between;
 }
@@ -360,7 +359,7 @@ footer{
 
     .menus{
         background-color: hsl(0, 0%, 98%);
-        width: calc(100% - 10rem);
+        width: calc(100% - 5rem);
         max-width: 700px;
         height: 400px;
         align-items: center;
@@ -438,6 +437,8 @@ footer{
     }
     #inbox{
         width: 50%;
+        margin-right: 0;
+        margin-left: 1rem;
     }
     .redes-sociais{
         margin-top: 0;
@@ -454,13 +455,11 @@ footer{
         max-width: 100%;
         text-align: center;
     }
-    .footer-section-2 :nth-child(1){
+    .footer-section-2 > :nth-child(1){
         order: 5;
     }
-    .footer-section-2 :nth-child(4){
-        order: 3;
-    }
-    .footer-section-2 :nth-child(4){
+
+    .footer-section-2 > :nth-child(4){
         order: 5;
     }
 }
@@ -472,7 +471,7 @@ footer{
         margin-top: 2rem;
     }
     .get-started{
-        margin-top: 1rem;
+        margin-top: 3rem;
     }
     .section-1, .section-2, .section-3, .section-4{
         align-items: center;
@@ -538,14 +537,13 @@ footer{
     .glide{
         width: calc(100% - 2rem);
         margin: 0 auto;
-        height: 220px;
     }
     .glide__slides{
         overflow: hidden;
     }
     .glide__bullets{
         display: inline-flex;
-        bottom: 0;
+        bottom: -1.4rem;
     }
     .glide__bullet{
         margin: 0 5px 0;
@@ -567,6 +565,12 @@ footer{
     }
     .feedback{
         margin-top: 2.2rem;
+        max-height: 170px;
+        height: auto;
+    }
+    .feedback > p{
+        overflow: hidden scroll;
+        max-height: 80px;
     }
     .bloco-vantagem{
         display: block;
@@ -602,11 +606,18 @@ footer{
         font-size: 1.3rem;
     }
 }
-@media screen and (max-width: 470px) {
-    .glide__bullets{
-        bottom: -0.4rem;
+@media screen and (max-width: 500px) {
+    header{
+        padding: 2rem 3rem 0;
+    }
+    main{
+        padding: 0 3rem;
+    }
+    .footer-section-1, .footer-section-2{
+        padding: 2rem;
     }
 }
+
 @media screen and (max-width: 400px) {
     .bg-patther-1{
         background-size: 130%;
@@ -615,8 +626,11 @@ footer{
         background-position: bottom 30rem right -30rem;
         background-size: 40rem;
     }
+
+}
+@media screen and (max-width: 300px) {
     body{
-        min-width: 400px;
+        min-width: 300px;
     }
 
 }
