--- a/FrontEnd/assets/css/style.css
+++ b/FrontEnd/assets/css/style.css
@@ -31,6 +31,7 @@ body{
     max-width: 2000px;
     margin: 0 auto;
     overflow-x: hidden;
+    background-color: #fff;
 }
 body::-webkit-scrollbar-thumb{
     background-color: hsl(233, 12%, 13%);
